Enhance input clearing and update button styling
Improved the clearInputs function to reset all model-specific parameters and standard input areas, ensuring a more thorough reset of the form. Updated the 'Clear Input' button in index.html to use primary styling for better visibility. Adjusted CSS for .btn-primary:hover to improve color handling, including dark mode support.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -757,7 +757,7 @@
                                 <i class="fas fa-play"></i>
                                 <span>Start Analysis</span>
                             </button>
-                            <button class="btn btn-outline-secondary" onclick="clearInputs()">
+                            <button class="btn btn-primary btn-lg" onclick="clearInputs()">
                                 <i class="fas fa-eraser"></i>
                                 <span>Clear Input</span>
                             </button>
